@@ -160,6 +160,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * list=search doesn't list missing pages any more
 * (bug 15178) Added clshow to prop=categories to allow filtering for hidden/
   non-hidden categories
+* (bug 15228) Combining revids= and redirects now throws a warning instead of an
+  error, and still resolves redirects generated by the generator.
 
 === Languages updated in 1.14 ===
 
